@@ -1,12 +1,12 @@
 package com.jeanboy.app.training.ui.activity;
 
 import android.content.BroadcastReceiver;
-import android.content.ComponentName;
 import android.content.Context;
 import android.content.Intent;
 import android.content.IntentFilter;
 import android.os.Bundle;
 import android.os.Handler;
+import android.os.Message;
 import android.os.PersistableBundle;
 import android.support.annotation.Nullable;
 import android.util.Log;
@@ -15,8 +15,6 @@ import android.view.View;
 import com.jeanboy.app.training.R;
 import com.jeanboy.app.training.base.BaseActivity;
 
-import java.util.LinkedList;
-import java.util.List;
 
 public class MainActivity extends BaseActivity {
 
@@ -26,6 +24,18 @@ public class MainActivity extends BaseActivity {
     }
 
     public static final String ACTION_BUTTON = "com.jeanboy.widget.button.CLICK";
+
+    private Handler handler = new Handler() {
+        @Override
+        public void handleMessage(Message msg) {
+            super.handleMessage(msg);
+            switch (msg.what) {
+                case 0:
+                    //TODO: 处理消息
+                    break;
+            }
+        }
+    };
 
     @Override
     protected void onCreate(Bundle savedInstanceState) {
@@ -42,18 +52,59 @@ public class MainActivity extends BaseActivity {
             }
         }, intentFilter);
 
-        LinkedList<String> dataList = new LinkedList<>(); // 创建 LinkedList
-        dataList.add("test"); // 添加数据
-        dataList.add(1, "test1"); // 指定位置，添加数据
-        dataList.addFirst("first"); // 添加数据到头部
-        dataList.addLast("last"); // 添加数据到尾部
-        dataList.get(0); // 获取指定位置数据
-        dataList.getFirst(); // 获取头部数据
-        dataList.getLast(); // 获取尾部数据
-        dataList.remove(0); // 移除指定位置的数据
-        dataList.removeFirst(); // 移除头部数据
-        dataList.removeLast(); // 移除尾部数据
-        dataList.clear(); // 清空数据
+//        LinkedList<String> dataList = new LinkedList<>(); // 创建 LinkedList
+//        dataList.add("test"); // 添加数据
+//        dataList.add(1, "test1"); // 指定位置，添加数据
+//        dataList.addFirst("first"); // 添加数据到头部
+//        dataList.addLast("last"); // 添加数据到尾部
+//        dataList.get(0); // 获取指定位置数据
+//        dataList.getFirst(); // 获取头部数据
+//        dataList.getLast(); // 获取尾部数据
+//        dataList.remove(0); // 移除指定位置的数据
+//        dataList.removeFirst(); // 移除头部数据
+//        dataList.removeLast(); // 移除尾部数据
+//        dataList.clear(); // 清空数据
+
+//        handler.post(new Runnable() {
+//            @Override
+//            public void run() {
+//                // 运行在子线程中...
+//            }
+//        });
+//
+//        new Thread(new Runnable() {
+//            @Override
+//            public void run() {
+//                Message message = new Message();
+//                message.what = 0;
+//                message.obj = "测试消息";
+//                // 发送消息
+//                handler.sendMessage(message);
+//            }
+//        }).start();
+//
+//        LinkedList<String> dataList = new LinkedList<>(); // 创建 LinkedList
+//        dataList.add("test"); // 添加数据
+//        dataList.add(1, "test1"); // 指定位置，添加数据
+//        dataList.addFirst("first"); // 添加数据到头部
+//        dataList.addLast("last"); // 添加数据到尾部
+//        dataList.get(0); // 获取指定位置数据
+//        dataList.getFirst(); // 获取头部数据
+//        dataList.getLast(); // 获取尾部数据
+//        dataList.remove(1); // 移除指定位置的数据
+//        dataList.removeFirst(); // 移除头部数据
+//        dataList.removeLast(); // 移除尾部数据
+//        dataList.clear(); // 清空数据
+
+//        SparseArray sparseArray = new SparseArray();
+//        sparseArray.append(1,"aaaa");
+//        sparseArray.get(1);
+//        sparseArray.remove(1);
+//
+//        ArrayMap<String, String> arrayMap = new ArrayMap<>();
+//        arrayMap.put("test","haha");
+//        arrayMap.get("test");
+//        arrayMap.remove("test");
 
     }
 
@@ -65,6 +116,11 @@ public class MainActivity extends BaseActivity {
 
     public void toActivity(View view) {
         startActivity(new Intent(this, TestActivity.class));
+    }
+
+
+    public void toActivityTaskAffinity(View view) {
+        startActivity(new Intent(this, TaskAffinityActivity.class));
     }
 
     public void toFragment(View view) {
@@ -101,6 +157,10 @@ public class MainActivity extends BaseActivity {
 
     public void toMaterialDesign(View view) {
         startActivity(new Intent(this, MaterialDesignActivity.class));
+    }
+
+    public void toPatch(View view) {
+        startActivity(new Intent(this, PatchActivity.class));
     }
 
     public void toNetworkState(View view) {
